--- a/src/assets/styles/homeScreen.module.css
+++ b/src/assets/styles/homeScreen.module.css
@@ -10,19 +10,48 @@
 }
 
 .content {
-
+    margin-top: 333px;
 }
 
 .header {
-
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 36px;
+    display: flex;
+    align-items: flex-end;
+    color: #15191D;
 }
 
 .body {
-
+    margin-top: 30px;
+    width: 700px;
+    font-size: 16px;
+    line-height: 150%;
+    display: flex;
+    align-items: center;
+    color: #44474A;
 }
 
 .action {
+    cursor: pointer;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 7px 15px;
+    width: 165px;
+    height: 34px;
+    background: #FFFFFF;
+    border: 1px solid #007BFF;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
 
+.innerBtn {
+    font-size: 14px;
+    line-height: 20px;
+    color: #007BFF;
 }
 
 .triangle {
