--- a/src/components/HomeScreen/homeScreen.module.css
+++ b/src/components/HomeScreen/homeScreen.module.css
@@ -39,7 +39,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 7px 15px;
     width: 165px;
     height: 34px;
     background: #FFFFFF;
@@ -61,4 +60,5 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    z-index: -2;
 }
